--- a/public/index.html
+++ b/public/index.html
@@ -17,5 +17,8 @@
     <div id="root"></div>
     
   </body>
-  
+  <footer>
+    <h2 className="center"> Scandiweb Test assignment  </h2>
+
+  </footer>
 </html>
