--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     
   </body>
   <footer>
-    <h2 className="center"> Scandiweb Test assignment  </h2>
+    <h2 className="center" style="align-items: center;"> Scandiweb Test assignment  </h2>
 
   </footer>
 </html>
